k8s/topology/egress.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: irohide-egress-deployment
  namespace: default
  labels:
    k8s-app: irohide-egress-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: irohide-egress-deployment
  template:
    metadata:
      labels:
        k8s-app: irohide-egress-deployment
        name: irohide-egress-deployment
    spec:
      containers:
      - name: ironhide
        image: augugrumi/ironhide:debug
        args: ["-e"]
        imagePullPolicy: Always
        ports:
        - name: udp
          containerPort: 8778
          protocol: UDP
---
kind: Service
apiVersion: v1
metadata:
  name: ironhide-egress-service
  namespace: default
spec:
  selector:
    k8s-app: irohide-egress-deployment
  ports:
  - name: udp
    port: 8778
    protocol: UDP
  type: NodePort
