k8s/topology/controller.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: roulette-mongodb-deployment
  namespace: default
  labels:
    k8s-app: roulette-db
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: roulette-db
  template:
    metadata:
      labels:
        k8s-app: roulette-db
        name: roulette-db
    spec:
      containers:
      - image: mongo
        name: roulette-mongodb
        ports:
        - name: mongo
          containerPort: 27017
          hostPort: 27017
        volumeMounts:
            - name: mongo-persistent-storage
              mountPath: /data/db
      volumes:
        - name: mongo-persistent-storage
          persistentVolumeClaim:
            claimName: mongo-persistent-storage
---
kind: Service
apiVersion: v1
metadata:
  name: roulette-mongodb
  namespace: default
spec:
  selector:
    k8s-app: roulette-db
  ports:
  - name: mongo
    port: 27017
  clusterIP: None
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: roulette
  namespace: default
  labels:
    k8s-app: roulette
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: roulette
  template:
    metadata:
      labels:
        k8s-app: roulette
        name: roulette
    spec:
      containers:
      - name: roulette
        image: augugrumi/roulette
        imagePullPolicy: Always
        args: ["-e", "ironhide-egress-service", "-i", "ironhide-ingress-service"]
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
          - name: roulette-config
            mountPath: /config
      volumes:
      - name: roulette-config
        configMap:
          name: roulette-config
---
kind: Service
apiVersion: v1
metadata:
  name: roulette-service
  namespace: default
spec:
  selector:
    k8s-app: roulette
  ports:
  - protocol: TCP
    port: 80
    name: web
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vibes
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: roulette.vibes
    http:
      paths:
      - path: /
        backend:
          serviceName: roulette-service
          servicePort: http
